Fixed bug #38055 (Wrong interpretation of boolean parameters)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@216056 c90b9560-bf6c-de11-be94-00142212c4b1